# pd2pl

./: .gitignore  DESIGN.md  README.md  TASKS.md  pyproject.toml
docs/: CODE_STRUCTURE.md  CONTRIBUTION_WORKFLOW.md  CORE_CONCEPTS.md  DATE_UTILS.md  DEVELOPMENT_SETUP.md  ONBOARDING.md  PROJECT_OVERVIEW.md  WINDOW_FUNCTION_TRANSLATION.md
pandas_to_polars_translator/: logging.py  parser.py  translator.py
pandas_to_polars_translator/mapping/: method_maps.py
pd2pl/: __init__.py  __main__.py  chain_preprocessing.py  chain_tracking.py  config.py  errors.py  import_manager.py  import_strategy.py  imports_postprocess.py  logging.py  schema_tracking.py  translator.py
pd2pl/mapping/: __init__.py  (+7 more)
tests/: __init__.py  _helpers.py  conftest.py  test_astroid_integration.py  test_astroid_schema_tracking.py  test_astroid_visitors.py  test_basic_translations.py  test_cli.py  test_complex_translations.py  test_concat_translation.py  test_constructor_translations.py  test_date_methods.py  test_drop_duplicates_translations.py  test_drop_translations.py  test_dtype_translation.py  test_fillna_translations.py  test_filtering.py  test_groupby_aggregations.py  test_groupby_aggregations_udf.py  test_import_strategies.py  test_imports_postprocess.py  test_melt_translation.py  test_merge_translation.py  test_method_chains.py  test_no_rename.py  test_pivot_table_translation.py  test_pivot_translation.py  test_rename_translations.py  test_replace_translations.py  test_sample_translations.py  test_simple_chain.py  test_sort_translations.py  test_string_filtering.py  test_string_operations.py
(+24 files in other folders)
