[project]
name = "pd2pl"
requires-python = ">3.12"
version = "0.1.0"
description = "A tool to translate pandas code to polars code"
authors = [
    {name = "ShaulAb", email = "shaul@prestissimo.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "loguru>=0.7.0",
    "pyarrow>=19.0.1",
    "astroid>=3.3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",  # For coverage reporting
    "black>=23.0.0",      # For code formatting
    "isort>=5.12.0",      # For import sorting
    "mypy>=1.0.0",        # For type checking
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pd2pl"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.hatch.build.targets.wheel]
packages = ["pd2pl"] 
